fixed margin and pixel issues between screen sizes. Removed github link. Changed menu bar alignment.

--- a/css.css
+++ b/css.css
@@ -1,6 +1,5 @@
 #menubar {
-
-z-index: 3;
+	z-index: 3;
 	width: 100%;
 	height:100px;
 	background-color: white;
@@ -8,33 +7,33 @@ z-index: 3;
 	position: fixed;
 	top: -8px; 
 	left: 0px;
-
 	opacity: 0.8;
-margin-bottom: 2cm;
+	margin-bottom: 2cm;
+	
 }
 h1 {
-margin-top: 5;
-margin-bottom: -10;
-font-size: 23px;
+	margin-top: 5;
+	margin-bottom: -10;
+	font-size: 23px;
 }
+
 ul {
-margin-top: -20; 
-margin-bottom: -10; 
+	margin-top: -20; 
+	margin-bottom: -10; 
 }
 
 #heading {
-position: relative;
-top: 25%;
-font-weight: bold;
+	position: relative;
+	top: 25%;
+	font-weight: bold;
 }
 
 #position {
-
 	font-weight: italic;
 	font-size: 15px;
 }
-#title h1 {
 
+#title h1 {
 	margin: 0px 0px 0px 0px;
 	font-family: Century Gothic;
 	text-align: center;	
@@ -45,60 +44,42 @@ font-weight: bold;
 	height: 75px;
 }
 
-/*#resume{
-	padding-left: 5px;
-padding-right: 5px;
+#bio {
+	margin-right: 15px;
+	margin-left: 10px;
+	margin-top: 1px;
+	z-index: -1;
 	font-family:Century Gothic;
-	font-size:17px;
+	font-size: 23px;
+	font-weight: 600px;
 	background-color: #FFFFFF;
 	opacity: .9;
-	margin-top: 20%;
-	float: left;
+	position:absolute;
+	text-align: center;
+	line-height: 151%;
 	border: 2px solid black;
 	border-radius: 5px;
-	margin: 20px;*/
-
-
-	
-
-
-#bio {
-margin-right: 15px;
-margin-left: 10px;
-margin-top: 1px;
-z-index: -1;
-font-family:Century Gothic;
-font-size: 23px;
-background-color: #FFFFFF;
-opacity: .9;
-position:absolute;
-text-align: center;
-line-height: 151%;
-	border: 2px solid black;
-	border-radius: 5px;
-
-top: 15%;
+	top: 15%;
+	padding: 10px 10px 10px 10px;
 }
+
 #dropmenu {
 	z-index: 2;
-
 	text-decoration: none;
 	height: 100px;
 	width: 1000px;
 	font-size: 40px;
-	margin-left: 170px;
-	
-	text-align: center;
-	animation: fadein 5s;
-	-webkit-animation: fadein 5s;
-font-family: Century Gothic; }
+	margin-left: 50px;
+	text-align: left;
+
+	font-family: Century Gothic; 
+}
 
 /*link styling ideas from http://www.w3schools.com/css/css_link.asp*/
 /* unvisited link */
 
 a:link {
     color: black;
-
 	text-decoration: none;
 }
 
@@ -110,162 +91,165 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-   color: grey;
+	color: #B0C4DE;
 	text-decoration: none;
 }
 
 /* selected link */
-a:active {
-    color: #0000FF;
+	a:active {
+    color: #B0C4DE;
 	text-decoration: none;
 }
-
-
-
-
-img { display: block; 
-border-radius:100%; }
+img { display: block;
+border-radius:100%; 
+width: 320px;
+height: 320px;}
 #pic {
+width: 320px;
+height: 320px;
 z-index: 1;
- 
-   border-radius:100%;
+border-radius:100%;
 text-align: center;
 position: absolute;
-    left: 20%;
-    top: 35%;
+left: 20%;
+top: 35%;
 border-style: solid;
 border-size: 400px;
 border-color: black;
 }
 
+
 #name {
-
-position:absolute;
-left: 60%;
-top: 40%;
-font-size: 80px;
-font-family: Century Gothic;
-font-weight: bold;
-color: black;
-line-height: 20%;
-
-
+	position: absolute;
+	left: 50%;
+	top: 32%;
+	margin: 20px;
+	font-size: 80px;
+	font-family: Century Gothic;
+	font-weight; 900px;
+	color: black;
+	line-height: 20%;
+	margin: 20px;
+	margin-bottom: 20px;
 }
-#Skills{
-width: 450px;
-position: relative;
-top: 70px;
-padding-left: 5px;
-padding-right: 5px;
+
+#Skills {
+	margin-top: 20px;
+	margin-right: 10%;
+	width: 450px;
+	position: relative;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-family:Century Gothic;
 	font-size:17px;
 	background-color: #FFFFFF;
 	opacity: .9;
-	margin-top: 20%;
-	float: left;
+	float: right;
 	border: 2px solid black;
 	border-radius: 5px;
-	margin: 20px;
-margin-bottom: 20px;
+	
 }
+
 #Activities {
-width: 450px;
-position: relative;
-top: 70px;
-padding-left: 5px;
-padding-right: 5px;
+	margin-top: 20px;
+	margin-right: 10%;
+	width: 450px;
+	position: relative;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-family:Century Gothic;
 	font-size:17px;
 	background-color: #FFFFFF;
 	opacity: .9;
-	margin-top: 20%;
-	float: left;
+		float: right;
 	border: 2px solid black;
 	border-radius: 5px;
-	margin: 20px;
-margin-bottom: 20px;
+	
 }
+
 #RelevantCourses{
-width: 450px;
-position: relative;
-top: 70px;
-padding-left: 5px;
-padding-right: 5px;
+	margin-top: 20px;
+	margin-right: 10%;
+	width: 450px;
+	position: relative;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-family:Century Gothic;
 	font-size:17px;
 	background-color: #FFFFFF;
 	opacity: .9;
-	margin-top: 20%;
-	float: left;
+	float: right;
 	border: 2px solid black;
 	border-radius: 5px;
-	margin: 20px;
-margin-bottom: 20px;
+	
+	
 }
+
 #Experience {
-position: relative;
-top: 70px;
-padding-left: 5px;
-padding-right: 5px;
+	margin-left: 10%;
+	position: relative;
+
+	padding-left: 10px;
+	padding-right: 10px;
 	font-family:Century Gothic;
 	font-size:17px;
 	background-color: #FFFFFF;
 	opacity: .9;
-	margin-top: 20%;
+	margin-top: 100px;
 	float: left;
 	border: 2px solid black;
 	border-radius: 5px;
-	margin: 20px;
-margin-bottom: 20px;
-padding-bottom: 40px;
+
+	padding-bottom: 40px;
 }
+
 #Education {
-position: relative;
-top: 70px;
-padding-left: 5px;
-padding-right: 5px;
+
+margin-right: 10%;
+	position: relative;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-family:Century Gothic;
 	font-size:17px;
 	background-color: #FFFFFF;
 	opacity: .9;
-	margin-top: 20%;
-	float: left;
+	margin-top: 100px;
+	float: right;
 	border: 2px solid black;
 	border-radius: 5px;
-	margin: 20px;
-margin-bottom: 20px;
-width: 450px;
-margin-top: 250px 0px 0px 0px;
 
+	width: 450px;
+	
 }
+
 #as-pdf {
-text-align: left;
-font-size: 20px;
+	text-align: left;
+	font-size: 20px;
 }
 
-/*#rtitle {
-z-index: 1;
-position:absolute;
 
-left: 38%;
-top: 13%;
-font-size: 60px;
-font-family: Century Gothic;
-font-weight: bold;
-color: black;
-line-height: 20%;
-}*/
+#container {
+
+    
+	height: 30em;
+	width: 65em;
+	
+margin-top: 12%;
+  margin-left: auto;
+    margin-right: auto;
+	background-color: #FFFFFF;
+	opacity: .8;
+	
+	border: 2px solid black;
+	border-radius: 5px;
+}
+
 
 body {
-
-background: url("motherboard.jpg") no-repeat center center fixed;
-
- webkit-background-size: cover;
- moz-background-size: cover;
- o-background-size: cover;
- background-size: cover;
-
-
-
+	background: url("motherboard.jpg") no-repeat center center fixed;
+	 webkit-background-size: cover;
+	 moz-background-size: cover;
+	 o-background-size: cover;
+	 background-size: cover;
 }
 
